clusters/test1/test1-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: test1-ingress
spec:
  rules:
    - host: "nginx-application.com" 
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: nginx-service
              port:
                number: 80
    - host: "whoami-application.com"
      http:
        paths:
        - path: /
          pathType: Prefix
          backend:
            service:
              name: whoami-service
              port:
                number: 80
